--- a/index.html
+++ b/index.html
@@ -368,12 +368,20 @@
                             <span class="font-semibold text-gray-300">Reto:</span> Controlar pedidos, inventario y comisiones en tiempo real. 
                             <span class="font-semibold text-gray-300">Solución:</span> Sistema personalizado de control de inventario, registro de pedidos, cancelación automática de pedidos y estadísticas de venta y comisiones.
                         </p>
-                        <a href="#contacto" class="inline-flex items-center text-sm font-semibold text-neon-blue hover:text-neon-green transition-colors group-hover:translate-x-1 transform duration-300">
-                            Más información
-                            <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
-                            </svg>
-                        </a>
+                        <div class="flex flex-col sm:flex-row gap-3 sm:gap-4">
+                            <a href="https://ricardo397.pythonanywhere.com/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-sm font-semibold text-neon-blue hover:text-neon-green transition-colors group-hover:translate-x-1 transform duration-300">
+                                Visitar sitio
+                                <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
+                                </svg>
+                            </a>
+                            <a href="https://wa.me/5355513196?text=Hola%2C%20me%20interesa%20un%20proyecto%20similar%20al%20Gestor%20Like-Home" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center bg-[#25D366] text-white text-sm font-semibold px-4 py-2 rounded-lg hover:bg-[#20BA5A] transition-all">
+                                <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                                    <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+                                </svg>
+                                WhatsApp
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -401,45 +409,61 @@
                             <span class="font-semibold text-gray-300">Reto:</span> Proyectar profesionalismo y credibilidad nacional, mostrar catálogos de productos. 
                             <span class="font-semibold text-gray-300">Solución:</span> Sitio corporativo moderno con catálogo de productos y galería. Contacto rápido y sistema multilingüe.
                         </p>
-                        <a href="#contacto" class="inline-flex items-center text-sm font-semibold text-neon-green hover:text-neon-blue transition-colors group-hover:translate-x-1 transform duration-300">
-                            Más información
-                            <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
-                            </svg>
-                        </a>
+                        <div class="flex flex-col sm:flex-row gap-3 sm:gap-4">
+                            <a href="https://coimpre.pythonanywhere.com/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-sm font-semibold text-neon-green hover:text-neon-blue transition-colors group-hover:translate-x-1 transform duration-300">
+                                Visitar sitio
+                                <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
+                                </svg>
+                            </a>
+                            <a href="https://wa.me/5355513196?text=Hola%2C%20me%20interesa%20un%20sitio%20corporativo%20como%20el%20de%20Coimpre" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center bg-[#25D366] text-white text-sm font-semibold px-4 py-2 rounded-lg hover:bg-[#20BA5A] transition-all">
+                                <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                                    <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+                                </svg>
+                                WhatsApp
+                            </a>
+                        </div>
                     </div>
                 </div>
 
-                <!-- Project Card 3: Gestor de Remesas Eglis S.A. -->
+                <!-- Project Card 3: Catálogo Servicios Masajista -->
                 <div class="bg-dark-bg border border-dark-border rounded-2xl overflow-hidden hover:border-purple-500 transition-all hover:transform hover:-translate-y-2 group">
                     <!-- Project Image -->
                     <div class="relative h-48 sm:h-56 bg-gradient-to-br from-gray-800 to-gray-900 overflow-hidden">
-                        <!-- 📸 INSTRUCCIÓN: Reemplaza la línea de abajo con la ruta de la captura del Gestor Eglis -->
-                        <img src="Inicio Eglis.png" alt="Gestor de Remesas Eglis S.A." class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500"> -->
+                        <!-- 📸 INSTRUCCIÓN: Reemplaza la línea de abajo con la ruta de la captura del Catálogo Masajista -->
+                        <img src="Nestor.png" alt="Catálogo Servicios de Masajes" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500"> -->
                         <div class="w-full h-full flex items-center justify-center">
                             <svg class="w-16 h-16 sm:w-20 sm:h-20 text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
                             </svg>
                         </div>
                         <!-- Badge -->
                         <div class="absolute top-4 right-4 bg-purple-500/90 text-white text-xs font-bold px-3 py-1 rounded-full">
-                            Sistema Financiero
+                            Catálogo Digital
                         </div>
                     </div>
                     
                     <!-- Project Info -->
                     <div class="p-6">
-                        <h3 class="text-xl sm:text-2xl font-bold mb-3 text-white">Gestor de Remesas 'Eglis S.A.'</h3>
+                        <h3 class="text-xl sm:text-2xl font-bold mb-3 text-white">Catálogo de Servicios 'Masajista'</h3>
                         <p class="text-sm text-gray-400 mb-4 leading-relaxed">
-                            <span class="font-semibold text-gray-300">Reto:</span> Registrar remesas, tasas de cambio y transacciones de múltiples divisas. 
-                            <span class="font-semibold text-gray-300">Solución:</span> Plataforma web segura con auditoría completa y reportes financieros.
+                            <span class="font-semibold text-gray-300">Reto:</span> Mostrar tipos de masajes y agendar citas fácilmente. 
+                            <span class="font-semibold text-gray-300">Solución:</span> Catálogo visual con informacion de servicios, enlaces a información y redes sociales, y reservas directas por WhatsApp.
                         </p>
-                        <a href="#contacto" class="inline-flex items-center text-sm font-semibold text-purple-400 hover:text-purple-300 transition-colors group-hover:translate-x-1 transform duration-300">
-                            Más información
-                            <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
-                            </svg>
-                        </a>
+                        <div class="flex flex-col sm:flex-row gap-3 sm:gap-4">
+                            <a href="https://n3storg-touch.github.io/Catalogo/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center text-sm font-semibold text-purple-400 hover:text-purple-300 transition-colors group-hover:translate-x-1 transform duration-300">
+                                Visitar sitio
+                                <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
+                                </svg>
+                            </a>
+                            <a href="https://wa.me/5355513196?text=Hola%2C%20me%20interesa%20un%20cat%C3%A1logo%20digital%20como%20el%20del%20Masajista" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center bg-[#25D366] text-white text-sm font-semibold px-4 py-2 rounded-lg hover:bg-[#20BA5A] transition-all">
+                                <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                                    <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+                                </svg>
+                                WhatsApp
+                            </a>
+                        </div>
                     </div>
                 </div>
 
