--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     
     <!-- Google Analytics -->
     <!-- TODO: Reemplaza 'G-XXXXXXXXXX' con tu ID de Medición de Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BZSJXCRZV2"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FT6WXQ5YZR"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-BZSJXCRZV2'); // TODO: Reemplaza 'G-XXXXXXXXXX' con tu ID real
+
+        gtag('config', 'G-FT6WXQ5YZR');
     </script>
     
     <!-- Tailwind CSS CDN -->
